[tool.poetry]
name = "remoteme_back"
version = "0.0.1"
description = "Backend for main web app"
authors = ["imflop <imflop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.78.0"
typer = "^0.4.1"
sentry-sdk = "^1.5.12"
loguru = "^0.6.0"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.36"
orjson = "^3.6.8"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.13.9"
mypy = "^0.950"
flake8 = "^4.0.1"
ipython = "^8.3.0"
perflint = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
